# vissm

./: .gitignore  LICENSE  README.md  setup.cfg
src/vissm/: __init__.py  block_tridiag.py  laplace_lp.py  mixeff_sde_condmvn.py  model_ryder.py  models.py  models_sde.py  modelsfull.py  modelssemi.py  random_sde.py  sde_condmvn.py  sde_full.py  utils.py
src/vissm/old/: block_tridiag.py  laplace_lp.py  model_ryder.py  modelsfull.py  sde_condmvn.py  sde_full.py  sde_hybrid.py
src/vissm/pfjax/: stovol_model.py
tests/: btp_test.py
