[metadata]
name = vissm
version = attr: vissm.__version__
author = attr: vissm.__author__
author_email = mlysy@uwaterloo.ca
description = Variational Inference for State-Space Models
url = https://github.com/mohanwu/vissm
project_urls =
    Bug Tracker = https://github.com/mohanwu/vism/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    jax
    jaxlib
    equinox
    
[options.packages.find]
where = src
